--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="content">
 			<div id="header">
 				<h1 class="text">It's Mother's Day!🎉</h1>
-				<img id="flower-img" src="images/flower.gif" />
+				<img id="flower-img" src="flower.gif" />
 				<h2 id="mom-years">32 Years</h2>
 				<h4 id="mom-date">06.27.1990</h4>
 			</div>
